crates/apollo-compiler/test_data/diagnostics/0051_subscription_operation_with_root_introspection_field.txt
Error: subscription `sub` can not have an introspection field as a root field
   ╭─[0051_subscription_operation_with_root_introspection_field.graphql:2:3]
   │
 2 │   __typename
   │   ─────┬────  
   │        ╰────── __typename is an introspection field
───╯
Error: a field cannot be named `__typename` as names starting with two underscores are reserved
   ╭─[0051_subscription_operation_with_root_introspection_field.graphql:6:3]
   │
 6 │   __typename: String
   │   ─────┬────  
   │        ╰────── Pick a different name here
───╯

